fix: drawer container overflow

--- a/src/app/shared/components/frame/frame.component.scss
+++ b/src/app/shared/components/frame/frame.component.scss
@@ -5,7 +5,7 @@
   $toolbar-height: 64px;
 
   height: calc(100% - $toolbar-height);
-  overflow: scroll !important;
+  overflow: scroll;
 }
 
 .mat-drawer-side {
